{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 24,
  "lineage": "856b321e-76ae-fa19-fe2d-d29a163e1888",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_trino_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-25T20:43:12.064-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/happybase-mvp/global/firewalls/allow-trino-access",
            "log_config": [],
            "name": "allow-trino-access",
            "network": "https://www.googleapis.com/compute/v1/projects/happybase-mvp/global/networks/happybase-mvp-vpc",
            "priority": 1000,
            "project": "happybase-mvp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/happybase-mvp/global/firewalls/allow-trino-access",
            "source_ranges": [
              "108.204.32.89/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node",
              "happybase-mvp-gke"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/happybase-mvp/global/networks/happybase-mvp-vpc",
            "mtu": 0,
            "name": "happybase-mvp-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "happybase-mvp",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/happybase-mvp/global/networks/happybase-mvp-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-25T19:51:12.554-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/happybase-mvp/regions/us-west1/subnetworks/happybase-mvp-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "happybase-mvp-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/happybase-mvp/global/networks/happybase-mvp-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "happybase-mvp",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/happybase-mvp/regions/us-west1/subnetworks/happybase-mvp-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "trino_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "trino/trino-ingress",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "gce"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "trino-ingress",
                "namespace": "trino",
                "resource_version": "31075",
                "uid": "13add0ee-4e51-47b5-85df-732fdda65a81"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "trino",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_container_cluster.primary",
            "google_container_node_pool.primary_nodes",
            "helm_release.trino"
          ]
        }
      ]
    }
  ]
}